--- a/index.html
+++ b/index.html
@@ -438,6 +438,10 @@
                                 <td class="description">- specifies the typeface in a rule set</td>
                             </tr>
                             <tr>
+                                <td class="property">text-decoration:</td>
+                                <td class="description">- adds decorative lines to texts</td>
+                            </tr>
+                            <tr>
                                 <td class="property">color:</td>
                                 <td class="description">- sets the foreground text color of an element</td>
                             </tr>
@@ -446,7 +450,7 @@
                                 <td class="description">- ranges from <strong>0</strong> to <strong>1</strong> and controls the transparency of an element</td>
                             </tr>
                             <tr>
-                                <td class="property"> url("")</td>
+                                <td class="property">url("")</td>
                                 <td class="description">- links resources to properties (can set <strong>background-image:</strong>)</td>
                             </tr>
                         </tbody>
