--- a/index.html
+++ b/index.html
@@ -174,6 +174,11 @@
                                 <td class="description">- defines elements in a document with the same theme</td>
                             </tr>
                             <tr>
+                                <td class="tag">title=""</td>
+                                <td class="name">Title Attribute</td>
+                                <td class="description">- the text will appear when a user hovers their cursor over the element</td>
+                            </tr>
+                            <tr>
                                 <td class="tag">&lt;article&gt;</td>
                                 <td class="name">Article Element</td>
                                 <td class="description">- independent content for a specific theme</td>
@@ -440,6 +445,10 @@
                             <tr>
                                 <td class="property">text-decoration:</td>
                                 <td class="description">- adds decorative lines to texts</td>
+                            </tr>
+                            <tr>
+                                <td class="property">cursor:</td>
+                                <td class="description">- changes mouse cursor</td>
                             </tr>
                             <tr>
                                 <td class="property">color:</td>
