--- a/index.html
+++ b/index.html
@@ -459,6 +459,10 @@
                                 <td class="description">- ranges from <strong>0</strong> to <strong>1</strong> and controls the transparency of an element</td>
                             </tr>
                             <tr>
+                                <td class="property">box-shadow:</td>
+                                <td class="description">- adds shadow effects around elements</td>
+                            </tr>
+                            <tr>
                                 <td class="property">url("")</td>
                                 <td class="description">- links resources to properties (can set <strong>background-image:</strong>)</td>
                             </tr>
