--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                             <tr>
                                 <td class="tag">title=""</td>
                                 <td class="name">Title Attribute</td>
-                                <td class="description">- the text will appear when a user hovers their cursor over the element</td>
+                                <td class="description">- text appears when cursor hovers over the element</td>
                             </tr>
                             <tr>
                                 <td class="tag">&lt;article&gt;</td>
@@ -461,6 +461,10 @@
                             <tr>
                                 <td class="property">box-shadow:</td>
                                 <td class="description">- adds shadow effects around elements</td>
+                            </tr>
+                            <tr>
+                                <td class="property">transition:</td>
+                                <td class="description">- defines the transition between two states of an element</td>
                             </tr>
                             <tr>
                                 <td class="property">url("")</td>
