--- a/index.html
+++ b/index.html
@@ -363,6 +363,16 @@
                                 <td class="description">- selects elements with <strong>id="idname"</strong></td>
                             </tr>
                             <tr>
+                                <td class="tag">.breadcrumbs {}</td>
+                                <td class="name">Secondary Menu</td>
+                                <td class="description">- shows current location within a nav hierarchy</td>
+                            </tr>
+                            <tr>
+                                <td class="tag">li+li {}</td>
+                                <td class="name">Sibling Combinator</td>
+                                <td class="description">- selects elements next to each other</td>
+                            </tr>
+                            <tr>
 
                             <!--Grouping Part-->
                             <thead>
@@ -409,6 +419,10 @@
                             <tr>
                                 <td class="property">:active</td>
                                 <td class="description">- matches when an item is being activates by the user</td>
+                            </tr>
+                            <tr>
+                                <td class="property">: :before {}</td>
+                                <td class="description">- adds cosmetic content to an element with the <strong>content:</strong> property</td>
                             </tr>
                         </tbody>
                         
@@ -465,6 +479,10 @@
                             <tr>
                                 <td class="property">transition:</td>
                                 <td class="description">- defines the transition between two states of an element</td>
+                            </tr>
+                            <tr>
+                                <td class="property">content:</td>
+                                <td class="description">- used with ::before/::after to insert generated content</td>
                             </tr>
                             <tr>
                                 <td class="property">url("")</td>
