--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                             </tr>
                             <tr>
                                 <td class="property">content:</td>
-                                <td class="description">- used with ::before/::after to insert generated content</td>
+                                <td class="description">- used with <strong>::before</strong>/<strong>::after</strong> to insert generated content</td>
                             </tr>
                             <tr>
                                 <td class="property">url("")</td>
