--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <li><a href="#positioning" class="sub">Positioning</a></li>
                 <li><a href="#colors" class="sub">Colors</a></li>
                 <li><a href="#typography" class="sub">Typography</a></li>
+                <li><a href="#flexbox" class="sub">Flexbox</a></li>
 
                 <li><a href="#git" class="section">GIT</a></li>
                 <li><a href="#filesystem" class="sub">Filesystem</a></li>
@@ -668,6 +669,67 @@
                             <tr>
                                 <td class="property">@font-family {}</td>
                                 <td class="description">- allows external fonts or font files to be imported directly</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <!--Flexbox-->
+                <div id="flexbox">
+                    <h3>Flexbox</h3>
+                    <table>
+                        <thead>
+                            <th>Property</th>
+                            <th colspan="2">Description</th>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td class="property">display: flex;</td>
+                                <td class="description">- changes an element to a block-level container</td>
+                            </tr>
+                            <tr>
+                                <td class="property">display: inline-flex;</td>
+                                <td class="description">- allows multiple flex containers to appear inline with each other</td>
+                            </tr>
+                            <tr>
+                                <td class="property">justify-content:</td>
+                                <td class="description">- used to space items along the main axis</td>
+                            </tr>
+                            <tr>
+                                <td class="property">align-items:</td>
+                                <td class="description">- used to space items along the cross axis</td>
+                            </tr>
+                            <tr>
+                                <td class="property">flex-grow:</td>
+                                <td class="description">- specifies how much space (and in what proportions) flex items absorb</td>
+                            </tr>
+                            <tr>
+                                <td class="property">flex-shrink:</td>
+                                <td class="description">- specifies how much flex items shrink and in what proportions</td>
+                            </tr>
+                            <tr>
+                                <td class="property">flex-basis:</td>
+                                <td class="description">- specifies the initial size of an element w/ <strong>flex-grow</strong> and/or <strong>flex-shrink</strong></td>
+                            </tr>
+                            <tr>
+                                <td class="property">flex:</td>
+                                <td class="description">- single line declaration for <strong>flex-grow</strong>, <strong>flex-shrink</strong> and <strong>flex-basis</strong></td>
+                            </tr>
+                            <tr>
+                                <td class="property">flex-wrap:</td>
+                                <td class="description">- shifts elements along the cross axis if the flex container is too small</td>
+                            </tr>
+                            <tr>
+                                <td class="property">align-content:</td>
+                                <td class="description">- spaces rows along the cross axis</td>
+                            </tr>
+                            <tr>
+                                <td class="property">flex-direction:</td>
+                                <td class="description">- specifies the main and cross axes</td>
+                            </tr>
+                            <tr>
+                                <td class="property">flex-flow:</td>
+                                <td class="description">- single line declaration for <strong>flex-wrap</strong> and <strong>flex-direction</strong></td>
                             </tr>
                         </tbody>
                     </table>
