--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <li><a href="#colors" class="sub">Colors</a></li>
                 <li><a href="#typography" class="sub">Typography</a></li>
                 <li><a href="#flexbox" class="sub">Flexbox</a></li>
+                <li><a href="#grid" class="sub">Grid</a></li>
 
                 <li><a href="#git" class="section">GIT</a></li>
                 <li><a href="#filesystem" class="sub">Filesystem</a></li>
@@ -730,6 +731,55 @@
                             <tr>
                                 <td class="property">flex-flow:</td>
                                 <td class="description">- single line declaration for <strong>flex-wrap</strong> and <strong>flex-direction</strong></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <!--Grid-->
+                <div id="grid">
+                    <h3>Grid</h3>
+                    <table>
+                        <thead>
+                            <th>Property</th>
+                            <th colspan="2">Description</th>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td class="property">display: grid;</td>
+                                <td class="description">- creates a block-level grid</td>
+                            </tr>
+                            <tr>
+                                <td class="property">display: inline-grid;</td>
+                                <td class="description">- used for inline grid</td>
+                            </tr>
+                            <tr>
+                                <td class="property">grid-template-columns:</td>
+                                <td class="description">- defines the number and the width of each column</td>
+                            </tr>
+                            <tr>
+                                <td class="property">grid-template-rows:</td>
+                                <td class="description">- defines the number and the height of each row</td>
+                            </tr>
+                            <tr>
+                                <td class="property">grid-template: _ / _;</td>
+                                <td class="description">- shorthand to define rows and columns</td>
+                            </tr>
+                            <tr>
+                                <td class="property">%, em, rem, fr</td>
+                                <td class="description">- responsive units; using <strong>fr</strong> prevents columns from overflowing</td>
+                            </tr>
+                            <tr>
+                                <td class="property">...</td>
+                                <td class="description">- ...</td>
+                            </tr>
+                            <tr>
+                                <td class="property">...</td>
+                                <td class="description">- ...</td>
+                            </tr>
+                            <tr>
+                                <td class="property">...</td>
+                                <td class="description">- ...</td>
                             </tr>
                         </tbody>
                     </table>
