--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <li><a href="#elements" class="sub">Elements</a></li>
                 <li><a href="#structure" class="sub">Structure</a></li>
                 <li><a href="#tables" class="sub">Tables</a></li>
+                <li><a href="#forms" class="sub">Forms</a></li>
                 
                 <li><a href="#css" class="section">CSS</a></li>
                 <li><a href="#selectors" class="sub">Selectors</a></li>
@@ -332,6 +333,45 @@
                                 <td class="tag">colspan=""</td>
                                 <td class="name">Colspan Attribute</td>
                                 <td class="description">- indicates how many columns cell should span</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <!--Forms-->
+                <div id="forms">
+                    <h3>Forms</h3>
+                    <table>
+                        <thead>
+                            <th>Tag</th>
+                            <th>Name</th>
+                            <th>Description</th>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td class="tag">&lt;...&gt;</td>
+                                <td class="name">...</td>
+                                <td class="description">- ...</td>
+                            </tr>
+                            <tr>
+                                <td class="tag">&lt;...&gt;</td>
+                                <td class="name">...</td>
+                                <td class="description">- ...</td>
+                            </tr>
+                            <tr>
+                                <td class="tag">&lt;...&gt;</td>
+                                <td class="name">...</td>
+                                <td class="description">- ...</td>
+                            </tr>
+                            <tr>
+                                <td class="tag">&lt;...&gt;</td>
+                                <td class="name">...</td>
+                                <td class="description">- ...</td>
+                            </tr>
+                            <tr>
+                                <td class="tag">&lt;...&gt;</td>
+                                <td class="name">...</td>
+                                <td class="description">- ...</td>
                             </tr>
                         </tbody>
                     </table>
