--- a/index.html
+++ b/index.html
@@ -349,9 +349,9 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td class="tag">&lt;...&gt;</td>
-                                <td class="name">...</td>
-                                <td class="description">- ...</td>
+                                <td class="tag">&lt;form&gt;</td>
+                                <td class="name">Form Element</td>
+                                <td class="description">- used to collect info and send it for processing</td>
                             </tr>
                             <tr>
                                 <td class="tag">&lt;...&gt;</td>
