--- a/index.html
+++ b/index.html
@@ -351,17 +351,17 @@
                             <tr>
                                 <td class="tag">&lt;form&gt;</td>
                                 <td class="name">Form Element</td>
-                                <td class="description">- used to collect info and send it for processing</td>
+                                <td class="description">- used to collect information and send it for processing</td>
                             </tr>
                             <tr>
-                                <td class="tag">&lt;...&gt;</td>
-                                <td class="name">...</td>
-                                <td class="description">- ...</td>
+                                <td class="tag">action=""</td>
+                                <td class="name">Action Attribute</td>
+                                <td class="description">- determines where the information is sent</td>
                             </tr>
                             <tr>
-                                <td class="tag">&lt;...&gt;</td>
-                                <td class="name">...</td>
-                                <td class="description">- ...</td>
+                                <td class="tag">method=""</td>
+                                <td class="name">Method Attribute</td>
+                                <td class="description">- used to send data while submitting the form: <strong>GET</strong> and <strong>POST</strong></td>
                             </tr>
                             <tr>
                                 <td class="tag">&lt;...&gt;</td>
