--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                             <tr>
                                 <td class="tag">&lt;form&gt;</td>
                                 <td class="name">Form Element</td>
-                                <td class="description">- used to collect information and send it for processing</td>
+                                <td class="description">- collects information and sends it for processing</td>
                             </tr>
                             <tr>
                                 <td class="tag">action=""</td>
@@ -361,7 +361,7 @@
                             <tr>
                                 <td class="tag">method=""</td>
                                 <td class="name">Method Attribute</td>
-                                <td class="description">- used to send data while submitting the form: <strong>GET</strong> and <strong>POST</strong></td>
+                                <td class="description">- sends data while submitting the form: <strong>GET</strong> and <strong>POST</strong></td>
                             </tr>
                             <tr>
                                 <td class="tag">&lt;...&gt;</td>
