--- a/index.html
+++ b/index.html
@@ -364,10 +364,21 @@
                                 <td class="description">- sends data while submitting the form: <strong>GET</strong> and <strong>POST</strong></td>
                             </tr>
                             <tr>
-                                <td class="tag">&lt;...&gt;</td>
-                                <td class="name">...</td>
-                                <td class="description">- ...</td>
+                                <td class="tag">&lt;input&gt;</td>
+                                <td class="name">Input Element</td>
+                                <td class="description">- creates interactive controls to accept data from the user</td>
                             </tr>
+                            <tr>
+                                <td class="tag">type=""</td>
+                                <td class="name">Type Attribute</td>
+                                <td class="description">- determines how it renders and accepted data type</td>
+                            </tr>
+
+                            <!--Input types-->
+                            <thead>
+                                <th>Input Type</th>
+                                <th colspan="2">Description</th>
+                            </thead>
                             <tr>
                                 <td class="tag">&lt;...&gt;</td>
                                 <td class="name">...</td>
