--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                             <tr>
                                 <td class="tag">&lt;input&gt;</td>
                                 <td class="name">Input Element</td>
-                                <td class="description">- creates interactive controls to accept data from the user</td>
+                                <td class="description">- creates interactive controls to accept user data</td>
                             </tr>
                             <tr>
                                 <td class="tag">type=""</td>
@@ -376,7 +376,7 @@
 
                             <!--Input types-->
                             <thead>
-                                <th>Input Type</th>
+                                <th>&lt;input type=""&gt;</th>
                                 <th colspan="2">Description</th>
                             </thead>
                             <tr>
