--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
 
                             <!--Input types-->
                             <thead>
-                                <th>&lt;input type=""&gt;</th>
+                                <th>&lt;input type="..."&gt;</th>
                                 <th colspan="2">Description</th>
                             </thead>
                             <tr>
