--- a/index.html
+++ b/index.html
@@ -376,12 +376,23 @@
 
                             <!--Input types-->
                             <thead>
-                                <th>type="..."</th>
+                                <th>input type</th>
                                 <th colspan="2">Description</th>
                             </thead>
                             <tr>
-                                <td class="tag">&lt;...&gt;</td>
-                                <td class="name">...</td>
+                                <td class="tag">...</td>
+                                <td class="description">- ...</td>
+                            </tr>
+                            <tr>
+                                <td class="tag">...</td>
+                                <td class="description">- ...</td>
+                            </tr>
+                            <tr>
+                                <td class="tag">...</td>
+                                <td class="description">- ...</td>
+                            </tr>
+                            <tr>
+                                <td class="tag">...</td>
                                 <td class="description">- ...</td>
                             </tr>
                         </tbody>
