--- a/index.html
+++ b/index.html
@@ -380,20 +380,20 @@
                                 <th colspan="2">Description</th>
                             </thead>
                             <tr>
-                                <td class="tag">...</td>
-                                <td class="description">- ...</td>
+                                <td class="tag">text</td>
+                                <td colspan="2" class="description">- renders a text field for typing</td>
                             </tr>
                             <tr>
                                 <td class="tag">...</td>
-                                <td class="description">- ...</td>
+                                <td colspan="2" class="description">- ...</td>
                             </tr>
                             <tr>
                                 <td class="tag">...</td>
-                                <td class="description">- ...</td>
+                                <td colspan="2" class="description">- ...</td>
                             </tr>
                             <tr>
                                 <td class="tag">...</td>
-                                <td class="description">- ...</td>
+                                <td colspan="2" class="description">- ...</td>
                             </tr>
                         </tbody>
                     </table>
