--- a/index.html
+++ b/index.html
@@ -373,6 +373,16 @@
                                 <td class="name">Type Attribute</td>
                                 <td class="description">- determines how it renders and accepted data type</td>
                             </tr>
+                            <tr>
+                                <td class="tag">name=""</td>
+                                <td class="name">Name Attribute</td>
+                                <td class="description">- specifies the name of a form</td>
+                            </tr>
+                            <tr>
+                                <td class="tag">value=""</td>
+                                <td class="name">Value Attribute</td>
+                                <td class="description">- defines the text on the button or initial input value</td>
+                            </tr>
 
                             <!--Input types-->
                             <thead>
