--- a/index.html
+++ b/index.html
@@ -364,6 +364,11 @@
                                 <td class="description">- sends data while submitting the form: <strong>GET</strong> and <strong>POST</strong></td>
                             </tr>
                             <tr>
+                                <td class="tag">&lt;label for=""&gt;</td>
+                                <td class="name">Label Element</td>
+                                <td class="description">- creates interactive controls to accept user data</td>
+                            </tr>
+                            <tr>
                                 <td class="tag">&lt;input&gt;</td>
                                 <td class="name">Input Element</td>
                                 <td class="description">- creates interactive controls to accept user data</td>
