--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                             <tr>
                                 <td class="tag">&lt;label for=".id."&gt;</td>
                                 <td class="name">Label Element</td>
-                                <td class="description">- creates interactive controls to accept user data</td>
+                                <td class="description">- provide a short description for input</td>
                             </tr>
                             <tr>
                                 <td class="tag">&lt;input&gt;</td>
