--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                                 <td class="description">- sends data while submitting the form: <strong>GET</strong> and <strong>POST</strong></td>
                             </tr>
                             <tr>
-                                <td class="tag">&lt;label for=".id."&gt;</td>
+                                <td class="tag">&lt;label for=""&gt;</td>
                                 <td class="name">Label Element</td>
                                 <td class="description">- provide a short description for input</td>
                             </tr>
