--- a/index.html
+++ b/index.html
@@ -388,27 +388,62 @@
                                 <td class="name">Value Attribute</td>
                                 <td class="description">- defines the text on the button or initial input value</td>
                             </tr>
+                            <tr>
+                                <td class="tag">step=""</td>
+                                <td class="name">Step Attribute</td>
+                                <td class="description">- specifies the interval between numbers</td>
+                            </tr>
+                            <tr>
+                            <tr>
+                                <td class="tag">&lt;option&gt;</td>
+                                <td class="name">Option Element</td>
+                                <td class="description">- adds an option to an element (ex: dropdown list)</td>
+                            </tr>
 
                             <!--Input types-->
                             <thead>
-                                <th>input type</th>
+                                <th>Input Type</th>
                                 <th colspan="2">Description</th>
                             </thead>
                             <tr>
                                 <td class="tag">text</td>
-                                <td colspan="2" class="description">- renders a text field for typing</td>
+                                <td colspan="2" class="description">- renders a single row text field for typing</td>
                             </tr>
                             <tr>
-                                <td class="tag">...</td>
-                                <td colspan="2" class="description">- ...</td>
+                                <td class="tag">password</td>
+                                <td colspan="2" class="description">- will replace input text with another character for privacy</td>
                             </tr>
                             <tr>
-                                <td class="tag">...</td>
-                                <td colspan="2" class="description">- ...</td>
+                                <td class="tag">number</td>
+                                <td colspan="2" class="description">- restricts input to just numbers</td>
                             </tr>
                             <tr>
-                                <td class="tag">...</td>
-                                <td colspan="2" class="description">- ...</td>
+                                <td class="tag">range</td>
+                                <td colspan="2" class="description">- creates a slider bar</td>
+                            </tr>
+                            <tr>
+                                <td class="tag">checkbox</td>
+                                <td colspan="2" class="description">- renders a checkbox; each item needs its own</td>
+                            </tr>
+                            <tr>
+                                <td class="tag">radio</td>
+                                <td colspan="2" class="description">- only allows one radio button in a group to be selected</td>
+                            </tr>
+                            <tr>
+                                <td class="tag">&lt;select&gt;</td>
+                                <td colspan="2" class="description">- creates a dropdown list</td>
+                            </tr>
+                            <tr>
+                                <td class="tag">&lt;datalist&gt;</td>
+                                <td colspan="2" class="description">- creates a text field to type into and filter options</td>
+                            </tr>
+                            <tr>
+                                <td class="tag">&lt;textarea&gt;</td>
+                                <td colspan="2" class="description">- creates a larger text field for typing</td>
+                            </tr>
+                            <tr>
+                                <td class="tag">submit</td>
+                                <td colspan="2" class="description">- renders a submit button</td>
                             </tr>
                         </tbody>
                     </table>
