--- a/index.html
+++ b/index.html
@@ -445,6 +445,28 @@
                                 <td class="tag">submit</td>
                                 <td colspan="2" class="description">- renders a submit button</td>
                             </tr>
+
+                            <!-- Form validation-->
+                            <thead>
+                                <th>Validation</th>
+                                <th colspan="2">Description</th>
+                            </thead>
+                            <tr>
+                                <td class="tag">required</td>
+                                <td colspan="2" class="description">- the attribute requires the field to be completed</td>
+                            </tr>
+                            <tr>
+                                <td class="tag">min/max</td>
+                                <td colspan="2" class="description">- sets minimum/maximum values</td>
+                            </tr>
+                            <tr>
+                                <td class="tag">minlength/maxlength</td>
+                                <td colspan="2" class="description">- sets a minimum number of characters for a text field</td>
+                            </tr>
+                            <tr>
+                                <td class="tag">pattern</td>
+                                <td colspan="2" class="description">- requires input to follow specific guidelines</td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
