--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                             <tr>
                                 <td class="tag">method=""</td>
                                 <td class="name">Method Attribute</td>
-                                <td class="description">- sends data while submitting the form: <strong>GET</strong> and <strong>POST</strong></td>
+                                <td class="description">- sends data while submitting the form: <strong>GET</strong>/<strong>POST</strong></td>
                             </tr>
                             <tr>
                                 <td class="tag">&lt;label for=""&gt;</td>
