--- a/index.html
+++ b/index.html
@@ -904,6 +904,42 @@
                                 <td class="description">- responsive units; using <strong>fr</strong> prevents columns from overflowing</td>
                             </tr>
                             <tr>
+                                <td class="property">repeat()</td>
+                                <td class="description">- duplicates specifications a given number of times</td>
+                            </tr>
+                            <tr>
+                                <td class="property">minmax()</td>
+                                <td class="description">- prevents a row/column from getting too big/small</td>
+                            </tr>
+                            <tr>
+                                <td class="property">row-gap:</td>
+                                <td class="description">- creates gaps between rows</td>
+                            </tr>
+                            <tr>
+                                <td class="property">column-gap:</td>
+                                <td class="description">- creates gaps between columns</td>
+                            </tr>
+                            <tr>
+                                <td class="property">gap:</td>
+                                <td class="description">- creates row and column gaps at the same time</td>
+                            </tr>
+                            <tr>
+                                <td class="property">...</td>
+                                <td class="description">- ...</td>
+                            </tr>
+                            <tr>
+                                <td class="property">...</td>
+                                <td class="description">- ...</td>
+                            </tr>
+                            <tr>
+                                <td class="property">...</td>
+                                <td class="description">- ...</td>
+                            </tr>
+                            <tr>
+                                <td class="property">...</td>
+                                <td class="description">- ...</td>
+                            </tr>
+                            <tr>
                                 <td class="property">...</td>
                                 <td class="description">- ...</td>
                             </tr>
