--- a/index.html
+++ b/index.html
@@ -924,24 +924,32 @@
                                 <td class="description">- creates row and column gaps at the same time</td>
                             </tr>
                             <tr>
-                                <td class="property">...</td>
-                                <td class="description">- ...</td>
+                                <td class="property">grid-row-start:</td>
+                                <td class="description">- row at which the grid item to begin</td>
                             </tr>
                             <tr>
-                                <td class="property">...</td>
-                                <td class="description">- ...</td>
+                                <td class="property">grid-row-end:</td>
+                                <td class="description">- one greater than the row at which item to end</td>
                             </tr>
                             <tr>
-                                <td class="property">...</td>
-                                <td class="description">- ...</td>
+                                <td class="property">grid-row: _ / _</td>
+                                <td class="description">- shorthamd to define the start and the end for a row</td>
                             </tr>
                             <tr>
-                                <td class="property">...</td>
-                                <td class="description">- ...</td>
+                                <td class="property">grid-column-start:</td>
+                                <td class="description">- column at which the grid item to begin</td>
                             </tr>
                             <tr>
-                                <td class="property">...</td>
-                                <td class="description">- ...</td>
+                                <td class="property">grid-column-end:</td>
+                                <td class="description">- one greater than the column at which item to end</td>
+                            </tr>
+                            <tr>
+                                <td class="property">grid-column:</td>
+                                <td class="description">- shorthamd to define the start and the end for a column</td>
+                            </tr>
+                            <tr>
+                                <td class="property">grid-area: _ / _ / _ / _;</td>
+                                <td class="description">- combines row and column start/end/span values</td>
                             </tr>
                             <tr>
                                 <td class="property">...</td>
